12869
It occurs to me that having to specify a type parameter should be
unnecessary in the following code:

{code}
$$ scala
Welcome to Scala version 2.6.0-final.
Type in expressions to have them evaluated.
Type :help for more information.

scala> val jl = new java.util.ArrayList(0)
jl: java.util.ArrayList = []

scala> val sl = new scala.collection.jcl.ArrayList[String](jl)
sl: scala.collection.jcl.ArrayList[String] = []

scala> sl.toArray.map { y => y }
<console>:5: error: missing parameter type
  val res0 = sl.toArray.map { y => y }
                              ^
{code}

especially when if you save sl.toArray and then use map, that
works without complaints:

{code}
scala> val sa = sl.toArray
sa: Array[String] = [Ljava.lang.String;@a40f0e

scala> sa.map { y => y }
res1: Array[String] = [Ljava.lang.String;@a8198c
{code}
